--- a/firmware/src/config/default/default.mhc/tmr1.yml
+++ b/firmware/src/config/default/default.mhc/tmr1.yml
@@ -10,14 +10,14 @@ children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: tmr1, value: '306'}
+        attributes: {id: tmr1, value: '304'}
   - type: Integer
     attributes: {id: TIMER1_CLOCK_FREQ}
     children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: tmr1, value: '195312'}
+        attributes: {id: tmr1, value: '39062'}
   - type: Integer
     attributes: {id: TIMER1_EXT_CLOCK_FREQ}
     children:
@@ -26,14 +26,14 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'true'}
+        - {type: Value, value: 'false'}
   - type: Long
     attributes: {id: TIMER1_PERIOD}
     children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: tmr1, value: '65535'}
+        attributes: {id: tmr1, value: '19530'}
   - type: KeyValueSet
     attributes: {id: TIMER1_PRE_SCALER}
     children:
@@ -47,7 +47,7 @@ children:
     - type: Values
       children:
       - type: User
-        attributes: {value: '0'}
+        attributes: {value: '1'}
   - type: KeyValueSet
     attributes: {id: TIMER1_TECS}
     children:
@@ -56,7 +56,11 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'true'}
+        - {type: Value, value: 'false'}
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: '1'}
   - type: KeyValueSet
     attributes: {id: TIMER1_TGATE}
     children:
@@ -65,7 +69,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'false'}
+        - {type: Value, value: 'true'}
   - type: Float
     attributes: {id: TIMER1_TIME_PERIOD_MS}
     children:
@@ -74,7 +78,7 @@ children:
       - type: Float
         attributes: {id: max}
         children:
-        - {type: Value, value: '335.5503'}
+        - {type: Value, value: '1677.7687'}
     - type: Values
       children:
       - type: User
@@ -87,7 +91,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'true'}
+        - {type: Value, value: 'false'}
   - type: KeyValueSet
     attributes: {id: TIMER1_TWDIS}
     children:
@@ -96,7 +100,14 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'true'}
+        - {type: Value, value: 'false'}
+  - type: Boolean
+    attributes: {id: TMR1_INTERRUPT_MODE}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: 'true'}
   - type: Integer
     attributes: {id: TMR1_PRESCALER_VALUE}
     children:
@@ -105,4 +116,4 @@ children:
       - type: Dynamic
         attributes: {id: tmr1, value: '256'}
 - type: ElementPosition
-  attributes: {x: '190', y: '60', id: tmr1}
+  attributes: {x: '194', y: '59', id: tmr1}
