--- a/firmware/src/config/default/default.mhc/uart3.yml
+++ b/firmware/src/config/default/default.mhc/uart3.yml
@@ -5,12 +5,19 @@ children:
 - type: Symbols
   children:
   - type: Integer
+    attributes: {id: BAUD_RATE}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: '9600'}
+  - type: Integer
     attributes: {id: BRG_VALUE}
     children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: uart3, value: '12'}
+        attributes: {id: uart3, value: '64'}
   - type: Comment
     attributes: {id: UART_BAUD_PER_ERROR_COMMENT}
     children:
@@ -19,7 +26,7 @@ children:
       - type: String
         attributes: {id: text}
         children:
-        - {type: Value, value: '*** Baud Error = 0.1597 % ***'}
+        - {type: Value, value: '*** Baud Error = 0.1562 % ***'}
   - type: KeyValueSet
     attributes: {id: UART_BRGH}
     children:
@@ -27,19 +34,28 @@ children:
       children:
       - type: Dynamic
         attributes: {id: uart3, value: '1'}
+      - type: User
+        attributes: {value: '1'}
+  - type: KeyValueSet
+    attributes: {id: UART_CLKSEL}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: '2'}
   - type: Integer
     attributes: {id: UART_CLOCK_FREQ}
     children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: uart3, value: '24000000'}
+        attributes: {id: uart3, value: '10000000'}
   - type: Hex
     attributes: {id: UMODE_VALUE}
     children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: uart3, value: '0'}
+        attributes: {id: uart3, value: '131072'}
 - type: ElementPosition
-  attributes: {x: '30', y: '60', id: uart3}
+  attributes: {x: '30', y: '58', id: uart3}
