fix bug with picosecod input

--- a/firmware/src/config/default/default.mhc/settings.yml
+++ b/firmware/src/config/default/default.mhc/settings.yml
@@ -5,7 +5,7 @@ frameworkPath: ..\..\Harmony3
 processor: PIC32MM0256GPM064
 projectName: UART_proj
 settings:
-  PackageFilter: bootloader;bootloader_apps_can;bootloader_apps_ethernet;bootloader_apps_i2c;bootloader_apps_sdcard;bootloader_apps_serial_memory;bootloader_apps_uart;bootloader_apps_usb;bsp;core;core_apps_pic32mm;crypto;csp;csp_apps_pic32mm;csp_apps_pic32mm-master;dev_packs;harmony-services;net;quick_docs;reference_apps;usb;usb_apps_device;usb_apps_dual_role;usb_apps_host;usb_apps_multi_controller;x2c
+  PackageFilter: bootloader;bootloader_apps_i2c;bootloader_apps_uart;bootloader_apps_usb;bsp;core;core_apps_pic32mm;crypto;csp;csp_apps_pic32mm;dev_packs;harmony-services;net;quick_docs;reference_apps;usb;usb_apps_device;usb_apps_dual_role;usb_apps_multi_controller
   FORCE_OPTIMIZATION: 'false'
   GENERATE_BACKUP: 'true'
   TRUSTZONE: 'false'
