--- a/firmware/src/config/default/default.mhc/adc.yml
+++ b/firmware/src/config/default/default.mhc/adc.yml
@@ -74,6 +74,10 @@ children:
         attributes: {id: visible}
         children:
         - {type: Value, value: 'true'}
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: 'false'}
   - type: Boolean
     attributes: {id: AD1CSSL__CSSL_12}
     children:
